# File-Transfer-App

./: README.md  pyproject.toml
ft_app/: base.py  client.py  config.py  exceptions.py  protocol.py  server.py
ft_app/GUI/: app.py
tests/: common.py  got  test_allrun.py  test_base.py  test_client.py  test_proto.py
