[tool.poetry]
name = "file-transfer-app"
version = "0.1.0"
description = "Simple Transfer App"
authors = ["Matthew Wisdom <matthewwisdom11@gmail.com>, Nathaniel Handan <handanfoun@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
